--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.adouble.animatondemo">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,11 +17,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".FrameActivity">
+        <activity android:name=".baseanimate.FrameActivity">
         </activity>
-        <activity android:name=".TweenActivity">
+        <activity android:name=".baseanimate.TweenActivity">
         </activity>
-        <activity android:name=".propertyanimation.PropertAct">
+        <activity android:name=".baseanimate.propertyanimation.PropertAct">
+        </activity>
+        <activity android:name=".act.ListActivity">
+        </activity>
+        <activity android:name=".act.BaiduMapActivity">
         </activity>
     </application>
 
